syntax = "proto3";
package cosmos.ops.v1beta1;

option go_package = "github.com/tharsis/ethermint/x/ops/types";

message NameRecord{
    string id =1;
    string name=2;
    uint64 age=3;
}